2009-10-21	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/pc386.cfg: Remove RTEMS_BSP_FAMILY.

2009-10-20	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Don't add -ansi -fasm to CFLAGS.

2009-10-15	Chris Johns <chrisj@rtems.org>

	* ne2000/ne2000.c: Add --ne2k-irq and --ne2k-port boot command
	line configure options.

	* ide/ide.c: Fix a bug which left 4 words in the buffer of the
	disk. Some devices do not follow the standard and terminate the
	command which a new command occurs and/or low data ready when data
	is still to be read.
	
2009-10-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* make/custom/pc386.cfg: New (relocated from /make/custom).
	* make/custom/pc386dx.cfg: New (relocated from /make/custom).
	* make/custom/pc486.cfg: New (relocated from /make/custom).
	* make/custom/pc586.cfg: New (relocated from /make/custom).
	* make/custom/pc686.cfg: New (relocated from /make/custom).

2009-10-10	Sebastian Huber <sebastian.huber@embedded-brains.de>

	* Makefile.am: Added interrupt server.

2009-10-08	Chris Johns <chrisj@rtems.org>

	* ide/ide.c: Fixed more IDE driver bugs. The driver can transfer
	64K in a single write on my test PC and qemu with this driver. The
	driver only checks the data ready bit at the start of each 512
	block being transfered. This has speed the transfer loop up. Fixed
	the timing so the BSP timer is used until RTEMS has started.

2009-09-30	Ralf Corsépius <ralf.corsepius@rtems.org>

	* console/console.c, console/serial_mouse.c: Reflect
	termios_baud_to_number having been renamed to
	rtems_termios_baud_to_number.

2009-09-15	Till Straumann <strauman@slac.stanford.edu>

	PR 1344/bsps:
	* clock/ckinit.c: Fix more bugs (applied PR1344/attachment 702):
	TSC handler was used when 8254 was requested and vice versa.
	Also, nanosecond handler was never installed to RTEMS clock.

2009-09-15	Ralf Corsépius <ralf.corsepius@rtems.org>

	* configure.ac: Remove RTEMS_BSP_BOOTCARD_OPTIONS.
